addressed sonar issues
Change-Id: Iae36e3f24cdc1f1ced9e5cd827864e365ecc2a0b